--- a/config/Combined/model.yaml
+++ b/config/Combined/model.yaml
@@ -1,3 +1,5 @@
+external_speaker_dim: 512
+
 transformer:
   encoder_layer: 4
   encoder_head: 2
@@ -22,7 +24,7 @@ denoiser:
   min_beta: 0.1
   max_beta: 40
   s: 0.008
-  keep_bins: 80
+  keep_bins: 120
 
 discriminator:
   n_layer: 3
@@ -50,11 +52,11 @@ variance_embedding:
   energy_n_bins: 256
   energy_quantization: "linear" # support 'linear' or 'log', 'log' is allowed only if the energy values are not normalized during preprocessing
 
-multi_speaker: False
+multi_speaker: True
 
-max_seq_len: 1000 # max sequence length of LJSpeech is 1126
+max_seq_len: 1200 # max sequence length of VCTK_naive is 1126
 emotion_features: 2
 
 vocoder:
   model: "HiFi-GAN" # support 'HiFi-GAN', 'MelGAN'
-  speaker: "LJSpeech" # support  'LJSpeech', 'universal'
+  speaker: "universal" # support  'LJSpeech', 'universal'
